--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.1",
-    "express": "^4.14.0"
+    "dotenv": "^4.0.0",
+    "express": "^4.14.0",
+    "knex": "^0.12.9",
+    "pg": "^6.1.5"
   },
   "devDependencies": {
     "chai": "^3.5.0",
